[project]
name = "stake-blackjack-bot"
version = "0.1.0"
description = "Stake.com Blackjack 自動投注機器人，基於 webdice bot 架構"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "curl-cffi>=0.14.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "websockets>=16.0",
]

[project.scripts]
stake-bj = "stake_bj.main:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stake_bj"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
